added necessary profile for jenkins builds